discord-frontend/hartex-discord-entitycache-test/tests/ui/unexpected_end_of_attribute.stderr
error: unexpected end of attribute
  --> tests/ui/unexpected_end_of_attribute.rs:27:7
   |
27 |     #[entity]
   |       ^^^^^^
